----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-09-14 Michal Čihař  <michal@cihar.com>
    * themes.php, libraries/common.lib.php, libraries/defines.lib.php,
      libraries/select_theme.lib.php, themes/darkblue_orange/info.inc.php,
	  themes/original/info.inc.php: Better theme version check (bug #1023029).

2004-09-13 Garvin Hicking <me@supergarv.de>
    * browse_foreigners.php: bug #1027204 - paging did not
      work in foreigner browsing window.

2004-09-12 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php: bug #988723, sql error when ordering by count( * )

2004-09-11 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/dutch: small update
    * lang/chinese_simplified: updated, thanks to Simon - simon2san
    * server_privileges.php: bug #1003238, cannot manipulate a username
      like "example@nothost" where the "@" is part of the username

2004-09-10 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: grammar.

2004-09-09 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: bug #1022338: clarify about needed chown -R
      on the scripts (otherwise, problems in PHP safe mode)
    * tbl_change.php: bug #1024434, undefined sql_query when clicking
      on Insert tab from the Insert textfile sub-page

2004-09-07 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: bug #992211, wrong parameters to
      PMA_generate_common_hidden_inputs(), thanks to Ryan Schmidt

2004-09-07 Michal Čihař  <michal@cihar.com>
    * calendar.php: Minimal common.lib.php doesn't fix absolute path, so use
      full one (bug #1023444).

2004-09-07 Alexander M. Turek  <me@derrabus.de>
    * main.php: Typo.
    * libraries/sqlparser.data.php: Added keyword "SESSION".

2004-09-06 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.6.0-rc2 released

2004-09-05 Marc Delisle  <lem9@users.sourceforge.net>
    * ldi_table.php: bug #1010652, wrong label,